--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 <body>
 <div class="container">
+
+<span class="sales">sales</span>
 <div class="head">
   <h2>converse chuck taylor all star low top</h2>
 
@@ -26,7 +28,25 @@
 
 <p>Read to dress uo or down, these class canvas Chucka are an everyday wardrobe staple.</p>
 
-<a href="#" class="link">More information&rarr;</a> 
+
+
+
+
+
+<a href="#" class="link">More information&rarr;</a>
+
+
+<div class="colors">
+<div class="color"></div>
+  <div class="color color-blue"></div>
+  <div class="color color-red"></div>
+  <div class="color color-yellow"></div>
+    <div class="color color-green"></div>
+  <div class="color color-brown"></div>
+ 
+</div>
+
+
 <h2>product details</h2>
 <ul>
     <li>lightweight,durable canvas sneaker</li>
